--- a/style.css
+++ b/style.css
@@ -1,3 +1,48 @@
 * {
   padding: auto;
 }
+body {
+  max-width: 375px;
+}
+.page-preview {
+  background-color: #1c1a19;
+  padding-left: 10px;
+}
+nav {
+  background: #3c3a39;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  margin-bottom: 60px;
+}
+.humburger img {
+  color: white;
+}
+.social-media {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 50%;
+}
+h1 {
+  color: #ff6b00;
+  font-weight: 700;
+  font-size: 50px;
+}
+h2 {
+  color: white;
+}
+p {
+  color: white;
+}
+.left-logo {
+  color: white;
+  font-weight: 700;
+  font-size: 18px;
+  font-family: Arial, sans-serif;
+}
+.social-media img {
+  width: 28px;
+}
